# datascope

./: .gitattributes  .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  FAILURES.md  HANDOFF.md  PLAN.md  README.md  generate_sample.py  pyproject.toml  requirements-dev.txt  requirements.txt  scorer.py
.dev/: PLAN.md
.github/workflows/: ci.yml
datascope/: __init__.py  __main__.py  _legacy.py  cli.py  models.py
datascope/analyzers/: __init__.py  base.py  cardinality.py  format_check.py  missing_values.py  sentinel.py  type_consistency.py
datascope/findings/: __init__.py  composer.py  pipeline.py  severity.py  templates.py
datascope/loaders/: __init__.py  base.py  csv_loader.py  excel.py  parquet.py
datascope/reports/: __init__.py  _palette.py  annotated_excel.py  html.py  pdf.py
datascope/reports/brand_fonts/: __init__.py
docs/brainstorms/: 2026-05-14-data-quality-diagnostic-v2-requirements.md
docs/plans/: 2026-05-14-001-feat-data-quality-diagnostic-v2-plan.md
docs/solutions/architecture-patterns/: cell-level-type-preservation-data-quality-pipeline-2026-05-14.md
samples/: README.md
samples/input/: sample_mixed_types.xlsx  sample_sales.xlsx
samples/output/: sample_mixed_types_annotated.xlsx  sample_mixed_types_diagnostic.html  sample_mixed_types_field_report.xlsx  sample_mixed_types_field_report_strict.xlsx  sample_sales_diagnostic.html  sample_sales_field_report.xlsx
tests/: test_analyze.py  test_cardinality.py  test_cli.py  test_composer.py  test_format_check.py  test_integration.py  test_loaders.py  test_missing_values.py  test_models.py  test_report_annotated_excel.py  test_report_html.py  test_report_pdf.py  test_scorers.py  test_sentinel.py  test_severity.py  test_type_consistency.py
tools/: render_strict_mode_comparison.py
