[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datascope-dq"
version = "2.2.0"
description = "Data quality diagnostics for tabular datasets — surfaces hidden problems in plain English"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Shawn", email = "msshawnp@gmail.com" },
]
keywords = ["data-quality", "diagnostics", "csv", "excel", "type-detection", "data-validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "defusedxml>=0.7.0",
]

[project.optional-dependencies]
parquet = [
    "pyarrow>=12.0.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/MsShawnP/datascope"
Repository = "https://github.com/MsShawnP/datascope"
Issues = "https://github.com/MsShawnP/datascope/issues"

[project.scripts]
datascope = "datascope.cli:main"

[tool.setuptools.packages.find]
include = ["datascope*"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
